--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,7 +16,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Import your libraries\n"
+    "#Import your libraries\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -42,7 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "austin = pd.read_csv('../austin_weather.csv')"
    ]
   },
   {
@@ -61,7 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "austin.info()"
    ]
   },
   {
@@ -70,7 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "austin.describe()"
    ]
   },
   {
@@ -79,7 +84,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "austin.head()"
    ]
   },
   {
@@ -117,16 +123,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sorted(austin.DewPointAvgF.unique())[:5]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your observation here\n"
+    "```python\n",
+    "# Your observation here\n",
+    "```\n",
+    "\n",
+    "`pandas` automatically interprets **some values** as missing or NA. In this case, `'-'` wasn't interpreted as a missing value."
    ]
   },
   {
@@ -157,7 +166,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "austin[wrong_type_columns] = austin[wrong_type_columns].apply(pd.to_numeric, errors='coerce')"
    ]
   },
   {
@@ -173,7 +183,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "austin.dtypes"
    ]
   },
   {
@@ -762,7 +773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
