--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Check if your code has worked by printing the data types again. You should see only two `object` columns (`Date` and `Events`) now. All other columns should be `int64` or `float64`."
+    "**Check if your code has worked by printing the data types again. You should see only two `object` columns (`Date` and `Events`) now. All other columns should be `int64` or `float64`.**"
    ]
   },
   {
@@ -198,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Now that we have fixed the type mismatch, let's address the missing data.\n",
+    "**Now that we have fixed the type mismatch, let's address the missing data.**\n",
     "\n",
     "By coercing the columns to numeric, we have created `NaN` for each cell containing characters. We should choose a strategy to address these missing data.\n",
     "\n",
@@ -206,7 +206,7 @@
     "\n",
     "We check how much missing data we have by applying the `.isnull()` function to our dataset. To find the rows with missing data in any of its cells, we apply `.any(axis=1)` to the function. `austin.isnull().any(axis=1)` will return a column containing true if the row contains at least one missing value and false otherwise. Therefore we must subset our dataframe with this column. This will give us all rows with at least one missing value. \n",
     "\n",
-    "#### In the next cell, identify all rows containing at least one missing value. Assign the dataframes with missing values to a variable called `missing_values`."
+    "**In the next cell, identify all rows containing at least one missing value. Assign the dataframes with missing values to a variable called `missing_values`.**"
    ]
   },
   {
@@ -215,7 +215,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "missing_values = austin.isnull().any(axis=1)"
    ]
   },
   {
@@ -232,14 +233,14 @@
     "\n",
     "* Filling the values using some algorithm. \n",
     "\n",
-    "#### In our case, we will use a hybrid approach which is to first remove the data that contain most missing values then fill in the rest of the missing values with the *linear interpolation* algorithm."
+    "**In our case, we will use a hybrid approach which is to first remove the data that contain most missing values then fill in the rest of the missing values with the *linear interpolation* algorithm.**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Next, count the number of rows of `austin` and `missing_values`."
+    "**Next, count the number of rows of `austin` and `missing_values`.**"
    ]
   },
   {
@@ -248,14 +249,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(f'number of rows of austin is: {austin.shape[0]}')\n",
+    "print(f'number of rows of missing_values is: {missing_values.shape[0]}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Calculate the ratio of missing rows to total rows"
+    "**Calculate the ratio of missing rows to total rows**"
    ]
   },
   {
@@ -264,7 +267,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "ratio = missing_values.sum() / austin.shape[0]\n",
+    "print(f'ratio = {ratio:.2%}')"
    ]
   },
   {
@@ -282,14 +287,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "top5 = austin.isna().sum().sort_values(ascending=False).head()\n",
+    "top5"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### As you can see from the output, the majority of missing data is in one column called `PrecipitationSumInches`. What's the number of missing values in this column in ratio to its total number of rows?"
+    "**As you can see from the output, the majority of missing data is in one column called `PrecipitationSumInches`. What's the number of missing values in this column in ratio to its total number of rows?**"
    ]
   },
   {
@@ -298,16 +305,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "ratio = top5[0] / austin.shape[0]\n",
+    "print(f'{ratio:.2%}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Over 10% data missing! Therefore, we prefer to remove this column instead of filling its missing values. It doesn't make sense to *guess* its missing values because the estimation will be too \n",
-    "\n",
-    "#### Remove this column from `austin` using the `.drop()` function. Use the `inplace=True` argument.\n",
+    "Over 10% data missing! Therefore, we prefer to remove this column instead of filling its missing values. It doesn't make sense to *guess* its missing values because the estimation will be too "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Remove this column from `austin` using the `.drop()` function. Use the `inplace=True` argument.**\n",
     "\n",
     "*Hints:*\n",
     "\n",
@@ -325,18 +340,26 @@
    "outputs": [],
    "source": [
     "# Your code here \n",
+    "col_to_drop = top5.index[0]\n",
     "\n",
-    "\n",
+    "print(austin.drop(col_to_drop, axis=1, inplace=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Print `austin` to confirm the column is indeed removed\n",
-    "\n",
-    "austin"
+    "austin.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Next we will perform linear interpolation of the missing data.\n",
+    "**Next we will perform linear interpolation of the missing data.**\n",
     "\n",
     "This means that we will use a linear algorithm to estimate the missing data. Linear interpolation assumes that there is a straight line between the points and the missing point will fall on that line. This is a good enough approximation for weather related data. Weather related data is typically a time series. Therefore, we do not want to drop rows from our data if possible. It is prefereable to estimate the missing values rather than remove the rows. However, if you have data from a single point in time, perhaps a better solution would be to remove the rows. \n",
     "\n",
@@ -351,7 +374,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "austin_fixed = austin.interpolate(inplace=False)"
    ]
   },
   {
@@ -367,7 +391,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "pd.concat(\n",
+    "    [austin_fixed.isna().sum(),\n",
+    "    austin.isna().sum()],\n",
+    "    axis = 1\n",
+    ")"
    ]
   },
   {
