--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -421,7 +421,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "events = austin_fixed.Events.value_counts(dropna=False)\n",
+    "events"
    ]
   },
   {
@@ -439,14 +441,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer:\n"
+    "# Your answer:\n",
+    "max_events = max([len(words.split(',')) for words in events.index])\n",
+    "max_events"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### We want to transform the string-type `Events` values to the numbers. This will allow us to apply machine learning algorithms easily.\n",
+    "**We want to transform the string-type `Events` values to the numbers. This will allow us to apply machine learning algorithms easily.**\n",
     "\n",
     "How? We will create a new column for each type of events (i.e. *Rain*, *Snow*, *Fog*, *Thunderstorm*. In each column, we use `1` to indicate if the corresponding event happened in that day and use `0` otherwise.\n",
     "\n",
@@ -459,21 +463,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "event_list = ['Snow', 'Fog', 'Rain', 'Thunderstorm']\n",
-    "\n",
+    "event_list = ['Snow', 'Fog', 'Rain', 'Thunderstorm']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Your code here\n",
-    "\n",
-    "\n",
+    "for event in event_list:\n",
+    "    austin_fixed[event] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Print your new dataframe to check whether new columns have been created:\n",
-    "\n",
-    "austin_fixed"
+    "austin_fixed.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Next, populate the actual values in the dummy columns of  `austin_fixed`.\n",
+    "**Next, populate the actual values in the dummy columns of  `austin_fixed`.**\n",
     "\n",
     "You will check the *Events* column. If its string value contains `Rain`, then the *Rain* column should be `1`. The same for `Snow`, `Fog`, and `Thunderstorm`.\n",
     "\n",
@@ -490,14 +508,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "for event in event_list:\n",
+    "    austin_fixed[event] = austin_fixed['Events'].str.contains(event).astype(int)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Print out `austin_fixed` to check if the event columns are populated with the intended values"
+    "**Print out `austin_fixed` to check if the event columns are populated with the intended values**"
    ]
   },
   {
@@ -506,7 +526,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "austin_fixed.head()"
    ]
   },
   {
@@ -522,7 +543,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "austin_fixed.drop('Events', axis=1, inplace=True)"
    ]
   },
   {
