--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -566,7 +566,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "from datetime import datetime as dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here\n",
+    "austin_fixed['Date'] = pd.to_datetime(austin_fixed.Date).apply(dt.toordinal)"
    ]
   },
   {
@@ -582,7 +592,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "austin_fixed.head(5)"
+    "austin_fixed.Date.head(5)"
    ]
   },
   {
