--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -1938,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1958,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1979,7 +1979,7 @@
    "source": [
     "# Bonus Challenge 1\n",
     "\n",
-    "#### While the above is the common practice to prepare most datasets, when it comes to time series data, we sometimes do not want to randomly select rows from our dataset.\n",
+    "**While the above is the common practice to prepare most datasets, when it comes to time series data, we sometimes do not want to randomly select rows from our dataset.**\n",
     "\n",
     "This is because many time series algorithms rely on observations having equal time distances between them. In such cases, we typically select the majority of rows as the test data and the last few rows as the training data. We don't use `train_test_split()` to select the train/test data because it returns random selections.\n",
     "\n",
@@ -1988,11 +1988,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "from math import ceil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1056"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here:\n",
+    "ts_rows = ceil(0.8 * austin_fixed.shape[0])\n",
+    "ts_rows"
    ]
   },
   {
@@ -2004,11 +2026,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "X_ts_train, X_ts_test = X.iloc[:ts_rows], X.iloc[ts_rows:]"
    ]
   },
   {
@@ -2020,11 +2043,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "y_ts_train, y_ts_test = y.iloc[:ts_rows], y.iloc[ts_rows:]"
    ]
   },
   {
@@ -2039,7 +2063,7 @@
     "\n",
     "We will use scikit-learn's [*Support Vector Machines*](https://scikit-learn.org/stable/modules/svm.html) to compute the fit of our training data set, the test on our test data set.\n",
     "\n",
-    "#### In the cell below, import `svm` from `sklearn`:"
+    "**In the cell below, import `svm` from `sklearn`:**"
    ]
   },
   {
@@ -2055,7 +2079,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Now, call `svm.SVC.fit()` on `X_train` and `y_train`. Assign the returned value to a variable called `clf` which stands for *classifier*. Then obtain the test score for `X_test` and `y_test` by calling `clf.score()`."
+    "**Now, call `svm.SVC.fit()` on `X_train` and `y_train`. Assign the returned value to a variable called `clf` which stands for *classifier*. Then obtain the test score for `X_test` and `y_test` by calling `clf.score()`.**"
    ]
   },
   {
@@ -2071,9 +2095,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### You now see the model fit score of your test data set. If it's extremely low, it means your selected model is not a good fit and you should try other models.\n",
+    "**You now see the model fit score of your test data set. If it's extremely low, it means your selected model is not a good fit and you should try other models.**\n",
     "\n",
-    "#### In addition to fitting `X_train`, `y_train`, `X_test`, and `y_test`, you can also fit `X_ts_train`, `y_ts_train`, `X_ts_test`, and `y_ts_test` if you completed Bonus Challenge 1."
+    "**In addition to fitting `X_train`, `y_train`, `X_test`, and `y_test`, you can also fit `X_ts_train`, `y_ts_train`, `X_ts_test`, and `y_ts_test` if you completed Bonus Challenge 1.**"
    ]
   },
   {
@@ -2089,7 +2113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### We hope you have learned a lot of useful stuff in this lab!"
+    "**We hope you have learned a lot of useful stuff in this lab!**"
    ]
   }
  ],
