--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -46,9 +46,10 @@
         "colab": {}
       },
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import numpy as np"
       ],
-      "execution_count": 1,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -84,7 +85,7 @@
       "source": [
         "austin=pd.read_csv(\"https://raw.githubusercontent.com/eduardoheros/lab-intro-to-ml/master/austin_weather.csv\")"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -109,12 +110,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 309
         },
-        "outputId": "6bc64b6e-1839-47d3-e6e8-4a8d2203e498"
+        "outputId": "39d3b482-5aae-4163-dff3-1cce8835bdae"
       },
       "source": [
         "austin.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -300,7 +301,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 5
         }
       ]
     },
@@ -313,12 +314,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 493
         },
-        "outputId": "c3d892cb-eee9-4e48-f6a7-87594d28453a"
+        "outputId": "ca717410-5d7f-423f-a9c0-a3bece0db076"
       },
       "source": [
         "austin.info()"
       ],
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,12 +366,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 297
         },
-        "outputId": "03204b58-c5ea-4ddd-a76a-35c5831c1ab6"
+        "outputId": "eeb8ef09-c76c-464b-dd50-95e7fa30b825"
       },
       "source": [
         "austin.describe()"
       ],
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -467,22 +468,9 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 8
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "FlvPor_6wjie",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# Your code here\n"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -527,13 +515,34 @@
       "metadata": {
         "id": "3fh1ttlLwjiq",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "9315ef3d-21f7-4382-8eb9-55bdfcf0a190"
       },
       "source": [
-        "# Your code here\n"
+        "austin.loc[:,\"DewPointHighF\"].unique()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([67., 43., 31., 36., 44., 39., 41., 49., 51., 37., 55., 54., 15.,\n",
+              "       29., 60., 64., 58., 28., 42., 22., 38., 45., 19., 59., 62., 40.,\n",
+              "       17., 53., 34., 48., 52., 61., 63., 33., 57., 65., 46., 32., 50.,\n",
+              "       27., 56., 47., 68., 69., 66., 70., 73., 71., 76., 72., 75., 74.,\n",
+              "       nan, 77., 23., 35., 30., 79., 78., 80., 26., 18., 25., 13.])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -543,10 +552,62 @@
         "colab": {}
       },
       "source": [
-        "# Your observation here\n"
+        "austin.DewPointHighF=pd.to_numeric(austin.loc[:,\"DewPointHighF\"],errors=\"coerce\")"
       ],
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YC20KB0hZ9xi",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 493
+        },
+        "outputId": "1f94e7e8-5ec2-4467-f1a8-61f97df547d5"
+      },
+      "source": [
+        "austin.info()"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 1319 entries, 0 to 1318\n",
+            "Data columns (total 21 columns):\n",
+            " #   Column                      Non-Null Count  Dtype  \n",
+            "---  ------                      --------------  -----  \n",
+            " 0   Date                        1319 non-null   object \n",
+            " 1   TempHighF                   1319 non-null   int64  \n",
+            " 2   TempAvgF                    1319 non-null   int64  \n",
+            " 3   TempLowF                    1319 non-null   int64  \n",
+            " 4   DewPointHighF               1312 non-null   float64\n",
+            " 5   DewPointAvgF                1319 non-null   object \n",
+            " 6   DewPointLowF                1319 non-null   object \n",
+            " 7   HumidityHighPercent         1319 non-null   object \n",
+            " 8   HumidityAvgPercent          1319 non-null   object \n",
+            " 9   HumidityLowPercent          1319 non-null   object \n",
+            " 10  SeaLevelPressureHighInches  1319 non-null   object \n",
+            " 11  SeaLevelPressureAvgInches   1319 non-null   object \n",
+            " 12  SeaLevelPressureLowInches   1319 non-null   object \n",
+            " 13  VisibilityHighMiles         1319 non-null   object \n",
+            " 14  VisibilityAvgMiles          1319 non-null   object \n",
+            " 15  VisibilityLowMiles          1319 non-null   object \n",
+            " 16  WindHighMPH                 1319 non-null   object \n",
+            " 17  WindAvgMPH                  1319 non-null   object \n",
+            " 18  WindGustMPH                 1319 non-null   object \n",
+            " 19  PrecipitationSumInches      1319 non-null   object \n",
+            " 20  Events                      1319 non-null   object \n",
+            "dtypes: float64(1), int64(3), object(17)\n",
+            "memory usage: 216.5+ KB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -574,7 +635,7 @@
         "                      'VisibilityAvgMiles', 'VisibilityLowMiles', 'WindHighMPH', 'WindAvgMPH', \n",
         "                      'WindGustMPH', 'PrecipitationSumInches']"
       ],
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -585,9 +646,9 @@
         "colab": {}
       },
       "source": [
-        "# Your code here\n"
+        "austin[wrong_type_columns]=austin[wrong_type_columns].apply(lambda x: pd.to_numeric(x,errors=\"coerce\"))"
       ],
-      "execution_count": null,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -605,13 +666,52 @@
       "metadata": {
         "id": "oQvc__z3wjjH",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 493
+        },
+        "outputId": "28d4409b-86b3-4624-e977-4cc84138e270"
       },
       "source": [
-        "# Your code here\n"
+        "austin.info()\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 1319 entries, 0 to 1318\n",
+            "Data columns (total 21 columns):\n",
+            " #   Column                      Non-Null Count  Dtype  \n",
+            "---  ------                      --------------  -----  \n",
+            " 0   Date                        1319 non-null   object \n",
+            " 1   TempHighF                   1319 non-null   int64  \n",
+            " 2   TempAvgF                    1319 non-null   int64  \n",
+            " 3   TempLowF                    1319 non-null   int64  \n",
+            " 4   DewPointHighF               1312 non-null   float64\n",
+            " 5   DewPointAvgF                1312 non-null   float64\n",
+            " 6   DewPointLowF                1312 non-null   float64\n",
+            " 7   HumidityHighPercent         1317 non-null   float64\n",
+            " 8   HumidityAvgPercent          1317 non-null   float64\n",
+            " 9   HumidityLowPercent          1317 non-null   float64\n",
+            " 10  SeaLevelPressureHighInches  1316 non-null   float64\n",
+            " 11  SeaLevelPressureAvgInches   1316 non-null   float64\n",
+            " 12  SeaLevelPressureLowInches   1316 non-null   float64\n",
+            " 13  VisibilityHighMiles         1307 non-null   float64\n",
+            " 14  VisibilityAvgMiles          1307 non-null   float64\n",
+            " 15  VisibilityLowMiles          1307 non-null   float64\n",
+            " 16  WindHighMPH                 1317 non-null   float64\n",
+            " 17  WindAvgMPH                  1317 non-null   float64\n",
+            " 18  WindGustMPH                 1315 non-null   float64\n",
+            " 19  PrecipitationSumInches      1195 non-null   float64\n",
+            " 20  Events                      1319 non-null   object \n",
+            "dtypes: float64(16), int64(3), object(2)\n",
+            "memory usage: 216.5+ KB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -646,13 +746,41 @@
       "metadata": {
         "id": "XThpKKBdwjjO",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "8e4d5149-f048-4043-8f02-01fbc39ea13f"
       },
       "source": [
-        "# Your code here\n"
+        "austin.isnull().any(axis=1)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0       False\n",
+              "1       False\n",
+              "2       False\n",
+              "3       False\n",
+              "4        True\n",
+              "        ...  \n",
+              "1314    False\n",
+              "1315    False\n",
+              "1316    False\n",
+              "1317    False\n",
+              "1318    False\n",
+              "Length: 1319, dtype: bool"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 64
+        }
+      ]
     },
     {
       "cell_type": "markdown",
