--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "      <th>HumidityHighPercent</th>\n",
        "      <th>HumidityAvgPercent</th>\n",
        "      <th>HumidityLowPercent</th>\n",
-       "      <th>...</th>\n",
+       "      <th>SeaLevelPressureHighInches</th>\n",
        "      <th>SeaLevelPressureAvgInches</th>\n",
        "      <th>SeaLevelPressureLowInches</th>\n",
        "      <th>VisibilityHighMiles</th>\n",
@@ -275,7 +275,6 @@
        "      <th>WindHighMPH</th>\n",
        "      <th>WindAvgMPH</th>\n",
        "      <th>WindGustMPH</th>\n",
-       "      <th>PrecipitationSumInches</th>\n",
        "      <th>Events</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -286,22 +285,21 @@
        "      <td>74</td>\n",
        "      <td>60</td>\n",
        "      <td>45</td>\n",
-       "      <td>67</td>\n",
-       "      <td>49</td>\n",
-       "      <td>43</td>\n",
-       "      <td>93</td>\n",
-       "      <td>75</td>\n",
-       "      <td>57</td>\n",
-       "      <td>...</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>29.86</td>\n",
        "      <td>29.68</td>\n",
        "      <td>29.59</td>\n",
-       "      <td>10</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>20</td>\n",
-       "      <td>4</td>\n",
-       "      <td>31</td>\n",
-       "      <td>0.46</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>31.0</td>\n",
        "      <td>Rain , Thunderstorm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -310,22 +308,21 @@
        "      <td>56</td>\n",
        "      <td>48</td>\n",
        "      <td>39</td>\n",
-       "      <td>43</td>\n",
-       "      <td>36</td>\n",
-       "      <td>28</td>\n",
-       "      <td>93</td>\n",
-       "      <td>68</td>\n",
-       "      <td>43</td>\n",
-       "      <td>...</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>30.41</td>\n",
        "      <td>30.13</td>\n",
        "      <td>29.87</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>5</td>\n",
-       "      <td>16</td>\n",
-       "      <td>6</td>\n",
-       "      <td>25</td>\n",
-       "      <td>0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>25.0</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -334,22 +331,21 @@
        "      <td>58</td>\n",
        "      <td>45</td>\n",
        "      <td>32</td>\n",
-       "      <td>31</td>\n",
-       "      <td>27</td>\n",
-       "      <td>23</td>\n",
-       "      <td>76</td>\n",
-       "      <td>52</td>\n",
-       "      <td>27</td>\n",
-       "      <td>...</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>30.56</td>\n",
        "      <td>30.49</td>\n",
        "      <td>30.41</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>8</td>\n",
-       "      <td>3</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>12.0</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -358,22 +354,21 @@
        "      <td>61</td>\n",
        "      <td>46</td>\n",
        "      <td>31</td>\n",
-       "      <td>36</td>\n",
-       "      <td>28</td>\n",
-       "      <td>21</td>\n",
-       "      <td>89</td>\n",
-       "      <td>56</td>\n",
-       "      <td>22</td>\n",
-       "      <td>...</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>30.56</td>\n",
        "      <td>30.45</td>\n",
-       "      <td>30.3</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>7</td>\n",
-       "      <td>12</td>\n",
-       "      <td>4</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0</td>\n",
+       "      <td>30.30</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -382,69 +377,72 @@
        "      <td>58</td>\n",
        "      <td>50</td>\n",
        "      <td>41</td>\n",
-       "      <td>44</td>\n",
-       "      <td>40</td>\n",
-       "      <td>36</td>\n",
-       "      <td>86</td>\n",
-       "      <td>71</td>\n",
-       "      <td>56</td>\n",
-       "      <td>...</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>30.41</td>\n",
        "      <td>30.33</td>\n",
        "      <td>30.27</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>7</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2</td>\n",
-       "      <td>16</td>\n",
-       "      <td>T</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.0</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Date  TempHighF  TempAvgF  TempLowF DewPointHighF DewPointAvgF  \\\n",
-       "0  2013-12-21         74        60        45            67           49   \n",
-       "1  2013-12-22         56        48        39            43           36   \n",
-       "2  2013-12-23         58        45        32            31           27   \n",
-       "3  2013-12-24         61        46        31            36           28   \n",
-       "4  2013-12-25         58        50        41            44           40   \n",
+       "         Date  TempHighF  TempAvgF  TempLowF  DewPointHighF  DewPointAvgF  \\\n",
+       "0  2013-12-21         74        60        45           67.0          49.0   \n",
+       "1  2013-12-22         56        48        39           43.0          36.0   \n",
+       "2  2013-12-23         58        45        32           31.0          27.0   \n",
+       "3  2013-12-24         61        46        31           36.0          28.0   \n",
+       "4  2013-12-25         58        50        41           44.0          40.0   \n",
        "\n",
-       "  DewPointLowF HumidityHighPercent HumidityAvgPercent HumidityLowPercent  ...  \\\n",
-       "0           43                  93                 75                 57  ...   \n",
-       "1           28                  93                 68                 43  ...   \n",
-       "2           23                  76                 52                 27  ...   \n",
-       "3           21                  89                 56                 22  ...   \n",
-       "4           36                  86                 71                 56  ...   \n",
+       "   DewPointLowF  HumidityHighPercent  HumidityAvgPercent  HumidityLowPercent  \\\n",
+       "0          43.0                 93.0                75.0                57.0   \n",
+       "1          28.0                 93.0                68.0                43.0   \n",
+       "2          23.0                 76.0                52.0                27.0   \n",
+       "3          21.0                 89.0                56.0                22.0   \n",
+       "4          36.0                 86.0                71.0                56.0   \n",
        "\n",
-       "  SeaLevelPressureAvgInches SeaLevelPressureLowInches VisibilityHighMiles  \\\n",
-       "0                     29.68                     29.59                  10   \n",
-       "1                     30.13                     29.87                  10   \n",
-       "2                     30.49                     30.41                  10   \n",
-       "3                     30.45                      30.3                  10   \n",
-       "4                     30.33                     30.27                  10   \n",
+       "   SeaLevelPressureHighInches  SeaLevelPressureAvgInches  \\\n",
+       "0                       29.86                      29.68   \n",
+       "1                       30.41                      30.13   \n",
+       "2                       30.56                      30.49   \n",
+       "3                       30.56                      30.45   \n",
+       "4                       30.41                      30.33   \n",
        "\n",
-       "  VisibilityAvgMiles VisibilityLowMiles WindHighMPH WindAvgMPH WindGustMPH  \\\n",
-       "0                  7                  2          20          4          31   \n",
-       "1                 10                  5          16          6          25   \n",
-       "2                 10                 10           8          3          12   \n",
-       "3                 10                  7          12          4          20   \n",
-       "4                 10                  7          10          2          16   \n",
+       "   SeaLevelPressureLowInches  VisibilityHighMiles  VisibilityAvgMiles  \\\n",
+       "0                      29.59                 10.0                 7.0   \n",
+       "1                      29.87                 10.0                10.0   \n",
+       "2                      30.41                 10.0                10.0   \n",
+       "3                      30.30                 10.0                10.0   \n",
+       "4                      30.27                 10.0                10.0   \n",
        "\n",
-       "  PrecipitationSumInches               Events  \n",
-       "0                   0.46  Rain , Thunderstorm  \n",
-       "1                      0                       \n",
-       "2                      0                       \n",
-       "3                      0                       \n",
-       "4                      T                       \n",
+       "   VisibilityLowMiles  WindHighMPH  WindAvgMPH  WindGustMPH  \\\n",
+       "0                 2.0         20.0         4.0         31.0   \n",
+       "1                 5.0         16.0         6.0         25.0   \n",
+       "2                10.0          8.0         3.0         12.0   \n",
+       "3                 7.0         12.0         4.0         20.0   \n",
+       "4                 7.0         10.0         2.0         16.0   \n",
        "\n",
-       "[5 rows x 21 columns]"
+       "                Events  \n",
+       "0  Rain , Thunderstorm  \n",
+       "1                       \n",
+       "2                       \n",
+       "3                       \n",
+       "4                       "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +450,7 @@
    "source": [
     "# Your code here\n",
     "\n",
-    "austin.head(5)"
+    "austin.head()"
    ]
   },
   {
@@ -3453,12 +3451,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "eighty_pct = round(len(X)*.8)"
    ]
   },
   {
@@ -3470,11 +3469,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "x_ts_train = X[:ts_rows]\n",
+    "x_ts_test = X[ts_rows:]"
    ]
   },
   {
@@ -3490,7 +3492,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "y_ts_train = y[:ts_rows]\n",
+    "y_ts_test = y[ts_rows:]"
    ]
   },
   {
