--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -3451,13 +3451,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1055"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
     "\n",
-    "eighty_pct = round(len(X)*.8)"
+    "ts_rows = round(int(len(X)*.8))\n",
+    "ts_rows"
    ]
   },
   {
@@ -3469,14 +3481,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
     "\n",
-    "x_ts_train = X[:ts_rows]\n",
-    "x_ts_test = X[ts_rows:]"
+    "X_ts_train = X[:ts_rows]\n",
+    "X_ts_test = X[ts_rows:]"
    ]
   },
   {
@@ -3488,7 +3500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3519,7 +3531,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "from sklearn import svm"
    ]
   },
   {
@@ -3535,7 +3549,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "clf = svm.SVC()\n",
+    "clf.fit(X_train, y_train)\n",
+    "clf.score(X_test, y_test)"
    ]
   },
   {
@@ -3553,7 +3571,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "clf.fit(X_ts_train, y_ts_train)\n",
+    "clf.score(X_ts_test, y_ts_test)"
    ]
   },
   {
