Anna Heuberger lab done

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -3602,18 +3602,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Anna / pregunta a TAs: Como interpretar los resultados de SVM?"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### We hope you have learned a lot of useful stuff in this lab!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
